--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,81 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+.container {
+  position: relative;
+  margin: 120px;
+  padding: 0;
+
+}
+
+.clearfix {
+  clear: both;
+}
+
+.phones {
+  float: left;
+  margin-top: 0;
+  margin-left: 0;
+  width: 30%;
+}
+
+.header {
+  float: right;
+  width: 60%;
+  height: 20%;
+  margin-bottom: 3%;
+}
+
+button {
+  float: right;
+  border-radius: 3px;
+  padding: 10px;
+  font-weight: bold;
+  color: rgb(207, 231, 240);
+  background: rgb(117, 164, 185);
+  border: solid 0.5px rgb(31, 82, 150);
+  margin-top: 12px;
+  width: 110px;
+ }
+
+.paragraph {
+  float: left;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 10%;
+  width: 55%;
+  background-color: white;
+  height: 75%;
+  padding: 0 2.5% 0 2.5%;
+  border-radius: 5px;
+}
+
+h2 {
+  color: rgb(31, 82, 150);
+}
+
+.footer {
+    text-transform: uppercase;
+    margin-top: 50px;
+    margin-left: 200px;
+    margin-right: 200px;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+.footer a {
+    display: inline-block;
+    text-decoration: none;
+    margin-left: 15px;
+    color: rgb(31, 82, 150);
+}
+
+.copyright {
+  float: right;
+  margin-left: 20px;
+}
+
