--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,101 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.back {
+  height: 290px;
+  background-image: url("../images/bgtile.png"); 
+  background-repeat: repeat-x;
+
+} 
+.main{
+  
+  width: 70%;
+  position: absolute;
+  margin-left:auto;
+  margin-right:auto;
+  left:0;
+  right:0;
+  top: 100px;
+}
+.phone{
+  
+  width: 30%;
+  float: left;
+}
+.brand{
+  
+  width: 55%;
+  float: left;
+  margin: 10px 20px 0px 70px; 
+  
+}
+.loginBtn{
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px 15px;
+  font-size: 2em;
+  font-weight: 400;
+  font-size: 1em;
+  text-decoration: none;
+  background-color: #1c5380;
+  color: white;
+  float: right;
+  top: 30px;
+}
+
+.boxDownload{
+ 
+  width: 55%;
+  height: 400px;
+  float: left;
+  margin: 10px 20px 0px 70px;
+  padding: 20px 10px 0px 10px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+h2 {
+  padding: 0px 40px 0px 40px;
+  color: #06365f;
+  font-weight: 800;
+}
+
+p{
+  padding: 0px 40px 0px 40px;
+  font-weight: 400;
+}
+span{
+  font-weight: bold;
+}
+.boxDownload a{
+  padding: 0px 10px 0px 10px;
+}
+
+.navigator{
+  float: left;
+  margin-left:150px;
+  margin-right:auto;
+  
+  
+}
+ul{
+  list-style-type: none;
+  text-align: center;
+}
+
+li{
+  display: inline;
+  text-align: center;
+  margin: 0 10px 0 0;
+}
+li a{
+  padding: 2px 7px 2px 7px;
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 400;
+}
