--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,81 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+
+header {
+    background: url('../images/bgtile.png') repeat;
+    height: 300px;
+    position: relative;
+}
+
+section {
+    width: 50%;
+    float: left;
+}
+
+main {
+    width: 800px;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    margin-left: -400px;
+}
+
+.content {
+    background: url('../images/frame.png') no-repeat center / contain;
+    padding: 30px;
+    box-sizing: border-box;
+    background-position-y: 100px;
+    margin-top: 20px;
+}
+
+.content h2 {
+    margin-top: 40px;
+}
+
+footer {
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    padding: 40px 0;
+    font-size: 12px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #1c5380;
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+footer li {
+    display: inline;
+    padding: 0 5px;
+}
+
+.clearfix {
+    clear: both;
+}
+
+article img {
+    margin-right: 20px;
+}
+
+.logo {
+    display: inline;
+}
+
+.content a {
+    background: #1c5380;
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
 }
