--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,143 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.back {
+  height: 400px;
+  background: url("../images/bgtile.png") repeat;
+  position: relative;
+  box-shadow: inset 0px -20px 100px 100px #174f80;
+}
+
+
+.container{
+  position: absolute;
+  width: 1000px;
+  top: 180px;
+  left: 50%;
+  margin-left: -500px;
+}
+
+.image{
+  width: 37%;
+  float: left;
+  margin: 0;
+}
+
+.image img{
+  width: 100%;
+}
+
+.content{
+  width: 57%;
+  float:left;
+  box-sizing: border-box;
+  margin-left: 6%;
+  margin-top: 20px;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.title {
+  height: 90px;
+  margin-bottom: 20px;
+}
+
+.title a{
+  padding-bottom: 20px;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.title img{
+  height: 100%;
+}
+
+.homebutton{
+  display: block;
+  width: 120px;
+  height: 30px;
+  background-color:#1c5380;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  float:right;
+  margin-right: 15px;
+  margin-top: 20px;
+  box-shadow: 0 0 1px 1px #202020;
+}
+
+.title a img{
+  height: 22px;
+  margin: 13px 15px 0 10px;
+}
+
+.main {
+  background-image: url("../images/frame.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-sizing: border-box;
+  padding: 30px 45px 0 45px;
+  }
+
+h1{
+  color:  #06365f;
+  line-height: 1.4em;
+}
+
+.main p{
+  font-size: 1.1em;
+  padding-top: 20px;
+}
+
+.appstorebutton{
+  display: inline-block;
+  margin-top: 40px;
+  margin-right: 20px;
+}
+
+.appstorebutton img{
+  height: 56px;
+}
+
+footer{
+  text-align: center;
+  margin: 60px auto;
+}
+
+footer ul{
+  list-style-type: none;
+  margin: 0 auto;
+}
+
+footer ul li{
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-transform: uppercase;
+}
+
+footer ul li a{
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: .8em;
+}
+
+.greytext{
+  color: gray;
+  font-size: .8em;
+  margin-left: 10px;
 }
