--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +8,126 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+#main-frame {
+  width: 1000px;
+  margin: 100px auto 40px;
+  /*border: 1px solid rgb(100, 218, 139); */
+  height: 512px;
+  background-image: url("../images/phones.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+#right-frame {
+  /*border: 1px solid rgb(220, 236, 73) ;*/
+  float: right;
+  width: 600px;
+  height: 512px;
+  margin: 0px 0px;
+}
+
+.header {
+  margin: auto 10px;
+  /*border: 1px solid black ;*/
+  float: right;
+  width: 580px;
+  height: 80px;
+
+}
+
+.log-button {
+  float: right;
+  margin: 12px auto;
+  padding: 12px 15px;
+  background-color: #1c5380;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  border: 2px solid #183c5a4b;
+  text-align: center;
+}
+
+.log-button img {
+  display: inline;
+  height: 20px;
+  margin: auto 10px auto;
+}
+
+#main-content {
+  /*border: 1px solid rgb(214, 35, 35) ;*/
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 406px;
+  margin: 80px auto 0px;
+  padding: 12px 15px;
+}
+
+.article h1 {
+  font-size: 25px;
+  padding: 0 20px;
+  width: 260px;
+  color: #003569;
+}
+
+.article p {
+  padding: 0 20px;
+  /*border: 1px solid rgb(214, 35, 35) ;*/
+}
+
+.icons {
+  /*border: 1px solid rgb(214, 35, 35) ;*/
+  margin: 65px 0;
+  height: 50px;
+  width: 100%;
+}
+
+#icon-store {
+  /*border: 1px solid rgb(214, 35, 35) ;*/
+  background-image: url("../images/badge-iphone.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100px;
+  padding: 20px 80px;
+  margin: auto 50px 0 0;
+
+}
+
+#icon-play {
+  background-image: url("../images/badge-android.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100px;
+  padding: 20px 80px;
+  margin: auto 50px 0 0;
+}
+
+
+#footer {
+  padding: 60px;
+}
+
+#footer ul {
+  list-style-type: none;
+  text-decoration: none;
+  text-align: center;
+}
+
+#footer a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #3e88b9;
+}
+
+#footer li {
+
+  display: inline;
+  text-align: center;
+  margin: 0 10px 0 0;
+  font-weight: bold;
+  color: lightslategray;
 }
