--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,49 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+section {
+  position: absolute;
+  width: 80%;
+  margin: 0%;
+}
+nav {
+  text-transform: uppercase;
+  color: blue;
+  
+}
+.box-iphone {
+  padding: 5px 5px;
+  width = 20%;
+  float: left;
+}
+.box-content {
+  padding: 5px 5px;
+  width = 20%;
+  float: right;
+}
+
+}
+.blue {
+  height: 400px;
+  background-image: url("../images/bgtile.png"); 
+  background-repeat: repeat;
+  margin-bottom: 0px;
+  
+}
+.button {
+  border-style: solid;
+  border-color: blue;
+
+}
+.content{
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 15px,15px;
+  
+}
+
+.clearfix {
+  clear: both
 }
