--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,113 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-color: white;
+  
+}
+.header-background {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  background-size: contain;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 35%;
+}
+.header-background span {
+  border-style: solid;
+  border-radius: 1%;
+  background-color: #06365f;
+  padding: 5px 20px;
+  font-size: 1.3em;
+  color: white;
+  font-weight: 700;
+  position: relative;
+  left: 70%;
+  top: 50%;
+}
+
+
+.login-area span img {
+  padding-top: 5px;
+  margin-right: 20px;
+}
+
+main {
+  margin: 0 auto;
+  position: relative;
+  width: 80%;
+  padding: 5% 10%;
+}
+
+.clearfix {
+  clear: both;
+}
+
+
+.main-photo {
+  float: left;
+  width: 35%;
+  padding: 20px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.login-area {
+  float: left;
+  width: 65%;
+  box-sizing:border-box;
+  padding-top: 20px;
+  margin: 0 auto;
+}
+
+.box-content{
+  float: left;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  width: 65%;
+  padding: 20px;
+  margin: 0 auto;
+}
+.box-content p {
+  font-size: 0.9em;
+  text-align: left;
+  padding-bottom: 10px;
+  color: #303030;
+}
+
+
+h1 {
+  font-size: 2em;
+  color: #06365f;
+  text-align: left;
+  padding-right: 120px;
+}
+
+footer {
+  width: 100%;
+  padding: 5px 10px;
+  margin: 0 auto;
+}
+
+footer ul {
+  list-style-type: none;
+  margin: 0 auto 40px;
+  padding: 0px 60px;
+  text-align: center;
+}
+
+footer ul li {
+  display: inline-block;
+  box-sizing: border-box;
+  padding-right: 15px;
+  font-weight: 800;
+  color: #adaeb0;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #6589a9;
 }
