--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,61 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+/* ------------------------ HEADER ----------------------------- */
+
+header {
+  height: 40%;
+  padding: 80px;
+  background-color: blue;
+  width: 100%;
+  position: relative;
+}
+
+.head-containter {
+  display: flex;
+  justify-content: flex-end;
+  
+}
+
+#home-btn {
+  margin-left: 80px;
+  margin-top: 25px;
+  margin-right: 300px;
+}
+
+
+/* -------------------------- MAIN --------------------------- */
+
+.main-container {
+  display: flex;
+}
+
+.iphone {
+  margin-left:  20px;
+  padding-left: 200px;
+  width: 40%;
+  
+}
+
+.main-description {
+  background-image: url("../images/frame.png");
+  width: 35%;
+  margin: 0;
+  background-repeat: no-repeat;
+  height: 400px;
+  background-size: 100%;
+}
+
+.main-description p {
+  height: 100px;
+  text-align: center;
+  padding: 15px;
+}
+
+#foot-ul{
+  display: flex;
+  justify-content: space-between;
 }
