--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,60 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0; 
+}
+
+.header{
+  position: relative;
+  background: #1c5380; 
+  height: 250px; 
+}
+
+.logo{
+  padding-top: 150px;
+  padding-left: 75%
+  
+}
+
+.home-boton{
+  background-color: #06365f;   
+  color: white;
+  width: auto;
+  
+}
+
+.photo-phone{ 
+   position: relative;   
+   padding-left: 450px;
+   margin-top: 10%;
+   
+}
+
+.frame{ 
+  position: relative;
+ 
+ padding-left: 10px; 
+ 
+}
+
+.buton{
+position: relative;
+ background: #06365f;
+ color: white;
+
+}
+h2{
+  color: #06365f;   
+  
+}
+.section{
+  position: absolute;
+   
+ }
+.section2{
+  padding: 20% 20%;
+}
+
+.section3{
+  
 }
