--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,25 +12,26 @@ body {
 section {
   position: absolute;
   width: 80%;
-  margin: 0%;
+  margin: -300px;
 }
 nav {
   text-transform: uppercase;
-  color: blue;
+  color: blue; 
   
 }
 .box-iphone {
+  display: inline-block;
   padding: 5px 5px;
-  width = 20%;
+  width: 20%;
   float: left;
 }
 .box-content {
+  display: inline-block;
   padding: 5px 5px;
-  width = 20%;
+  width: 20%;
   float: right;
 }
 
-}
 .blue {
   height: 400px;
   background-image: url("../images/bgtile.png"); 
