--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+.background {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+  height: 400px;
+  position: relative;
+}
+
+.container {
+  width: 1000px;
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  margin-left: -500px;
+  /* border: 1px solid black; */
+
+  
+}
+
+.column1 {
+  float: left;
+  width: 30%;
+  margin-top: 30px;
+}
+
+.column2 {
+  margin: 40px;
+  float:left;
+  width: 60%;
+  
+}
+
+.log-in a{
+  text-decoration: none;
+  color: white;
+  background-color: #1c5380;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.log-in {
+  float:right;
+  margin-top: -62px;
+  margin-right: 100px;
+
+}
+
+.log-in img {
+  margin-top: 5px;
+}
+
+.info {
+  background-image: url(../images/frame.png);
+  background-size: content;
+  background-repeat: no-repeat;
+ 
+  padding: 20px;
+}
+
+.info-text {
+  max-width: 430px;
+  margin: 20px;
+}
+
+.info img {
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+h1{
+  font-size: 25px;
+  max-width: 300px;
+  color:#06365f;
+}
+
+footer{
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer li{
+  text-align: center;
+  list-style-type: none;
+  display: inline;
+  margin-right: 10px;
+
 }
