--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,119 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background-header{
+  height: 35vh;
+  background-image: url("../images/bgtile.png");
+}
+
+.body-container{
+  top: 15vh;
+  width: 100%;
+  position: fixed;
+}
+
+.main-container{
+  height: 70vh; 
+  width: 800px;
+  max-width: 90%;
+  margin: auto;
+}
+
+.container-photo{
+  box-sizing: border-box;
+  width: 45%;
+  height: 100%;
+  text-align: left;
+  float: left;
+}
+
+.container-photo img{
+  width: 90%;
+}
+
+.container-info{
+  box-sizing: border-box;
+  width: 55%;
+  height: 100%;
+  float: left;
+}
+
+.container-info-header{
+  padding: 35px 0 15px 0;
+}
+
+.container-info-header img{
+  box-sizing: border-box;
+  max-width: 60%;
+}
+
+.container-info-header-button{
+  margin-top: 7px;
+  width: 120px;
+  border-radius: 2px;
+  border: 1px solid #06365f;
+  background: linear-gradient(#7890ac, #1c5380);
+  padding: 5px 10px;
+  color: #dce2e9;
+  line-height: 35px;
+  font-weight: bold;
+  font-size: 16px;
+  float: right;
+}
+
+.container-info-header-button img{
+  height: 16px;
+  margin-right: 3px;
+}
+
+.container-info-content{
+  background-image: url("../images/frame.png");
+  padding: 30px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  
+}
+
+.container-info-content h1{
+  margin-top: 0px;
+  color: #06365f;
+}
+
+.container-info-content p{
+  font-size: .85em;
+}
+
+.container-info-content-stores img{
+  width: 30%;
+  margin-right: 15px;
+}
+
+.background-footer{
+  position: fixed;
+  bottom: 0px;
+  height: 10vh;
+  width: 100%;
+  text-align: center;
+  color: #06365f; /*No funciona el color de los botones*/
+}
+
+.footer-button{
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 0px 10px;
+}
+
+.footer-copyright{
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #e6e9ef;
+}
+
+
