--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,85 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+ }
+ 
+ .back {
+  height: 400px;
+  background: url("../images/bgtile.png") repeat;
+  position: relative;
+ }
+ 
+ 
+ .container{
+  position: absolute;
+  width: 1000px;
+  top: 180px;
+  left: 50%;
+  margin-left: -500px;
+ }
+ 
+ .image{
+  width: 35%;
+  float: left;
+  margin: 0;
+ }
+ 
+ .image img{
+  width: 100%;
+ }
+ 
+ .content{
+  width: 60%;
+  float:left;
+  box-sizing: border-box;
+  margin-left: 5%;
+ }
+ 
+ .clearfix{
+  clear: both;
+ }
+ 
+ .title {
+  height: 80px;
+ }
+ 
+ .title img{
+  height: 100%;
+ }
+ 
+ .homebutton{
+  display: block;
+  width: 100px;
+  background-color: #06365f;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  float:right;
+ }
+ 
+ .textmain {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-top: 20px;
+  }
+ 
+ h1{
+  color:  #06365f;
+  max-width: 400px;
+ }
+
+ footer li {
+   list-style-type: none;
+   display: inline;
+   margin-right: 10px;
+ }
+
+ footer {
+   margin: 0 auto;
+ }
