--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,52 @@
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: #06365f;
+light blue: 
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  background: #1c5380;
+  padding: 100px;
+}
+
+h2 {
+  width: 50%;
+  color: #06365f;
+}
+
+p {
+  width: 50%;
+  float: right;
+}
+
+#close-image {
+  color: white;
+  background: #1c5380;
+  float: right;
+  position: relative;
+  right: 600px;
+  top: 5px;
+  padding: 5px;
+  border: #1c5380;
+}
+
+.main {
+  float: right;
+  width: 50%;
+}
+
+footer li {
+  list-style-type: none;
+  display: inline;
+  color:#06365f;
+  
+
+
 }
