--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,6 +4,7 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -12,17 +13,31 @@ body {
 #header {
   min-height: 40vh;
   background: url("../images/bgtile.png");
+  position: absolute;
+  width: 100%;
 }
 
 #section {
   min-height: 45vh;
 }
 
-.brand {
-  position: absolute;
-  right: 20%;
+.page {
+  width: 51%;
+  right: 26%;
   top: 20%;
-  width: 40%;
+  position: absolute;
+}
+
+.container {
+  display: inline-block;
+  width: 60%;
+}
+
+.brand {
+  display: inline-block;
+  width: 100%;
+  padding: 5% 0;
+  margin-left: 5%;
 }
 
 .imagem-brand {
@@ -55,27 +70,20 @@ body {
 }
 
 .phone {
-  position: absolute;
-  left: 20%;
-  top: 20%;
+  display: inline-block;
 }
 
 .caixa {
   clear: both;
-  position: absolute;
-  top: 30%;
-  right: 20%;
-  width: 40%;
-  background-color: white;
-  border: 1px solid lightgrey;
-  padding: 2.5%;
-  padding-bottom: 0.7%;
+  padding: 5%;
   box-sizing: border-box;
+  margin-left: 5%;
+  background: url("../images/frame.png") no-repeat;
 }
 
 .caixa h2 {
   color: #1c5380;
-  width: 60%;
+  width: 58%;
   margin-top: 0;
 }
 
@@ -85,7 +93,15 @@ body {
 }
 
 .imagens-badge {
-  margin-top: 5%;
+  margin-top: 7%;
+}
+
+.badge-direita {
+  margin-left: 5%;
+}
+
+#footer {
+  margin-top: 10%;
 }
 
 .lista {
@@ -104,8 +120,10 @@ body {
   text-decoration: none;
   color: #1c5380;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 #copyright {
   color: grey;
+  text-transform: uppercase;
 }
