--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,12 +10,13 @@
 
 html{
   font-size: 62.5%;
+  background-color: #fff;
 }
 
 body {
   font: 200 1.6rem/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image: linear-gradient(to bottom, #fff0 0, #fff0 35%, #ffff 35%, #ffff 100%), url("../images/bgtile.png");
+  background-image: linear-gradient(to bottom, transparent 0, transparent 35%, #ffff 35%), url("../images/bgtile.png");
   background-size: cover;
 }
 
@@ -24,14 +25,13 @@ h2 {
 }
 
 .btn{
-  padding: .5rem;
+  padding: 1rem .5rem;
   background-image: linear-gradient(to bottom, hsl(207, 29%, 56%) 0%, hsl(207, 34%, 50%) 30%, hsl(207, 34%, 46%) 60%, hsl(207, 34%, 46%) 100%);
   border: 1px solid #0007;
   text-align: center;
   color: white;
-  border-radius: 2px;
+  border-radius: 3px;
   cursor: pointer;
-
 }
 
 .clearfix{
@@ -49,10 +49,12 @@ h2 {
 }
 
 .side-image{
+  display: inline-block;
   width: 40%;
 }
 
 .actions{
+  display: inline-block;
   width: 60%;
 }
 
@@ -63,28 +65,42 @@ h2 {
 }
 
 .actions > .nav > .brand{
-  float: left;
   width: 70%;
 }
 
 .actions > .nav > .login{
   position: absolute;
+  top: 0;
   right: 0;
   width: 20%;
 }
 
 .login .login-button{
+  position: relative;
   height: 80%;
   width: auto;
   display: inline-block;
-  padding: .5rem 1rem .25rem 1rem;
+  padding: .5rem 1rem;
+  min-height: 4rem;
+  min-width: 9rem;
+  text-align: left;
+  margin-top: 1.75rem;
+}
+
+.login .login-button img{
+  position: absolute;
+  bottom: 20%;
+  left: 10%;
 }
 
 .login .login-button span{
     display: inline-block;
-    margin-left: .5rem;
     font-size: 1.2rem;
     font-weight: bold;
+    position: absolute;
+    right: 10%;
+    top: 52.5%;
+    transform: translateY(-50%);
 }
 
 .description-box{
@@ -118,7 +134,6 @@ h2 {
   text-transform: uppercase;
   text-align: center;
 }
-
 
 .footer .related-links{
   display: inline-block;
