--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,36 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+    margin: 0;
+    padding: 0;
+}
+
+.back-img {
+  width: 100%;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.phones {
+
+}
+
+.logo {
+
+}\
+
+.button {
+
+}
+
+.download-but {
+
 }
