--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,94 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+div{
+  border: 1px solid transparent;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.header-shadow{
+  background-image: url("../images/bgtile.png");
+  background-repeat:repeat;
+  background-size:contain;  
+  height:300px;
+  width:100%;
+}
+
+.capture-text{
+  background-image: url("../images/frame.png");
+  background-repeat:no-repeat;
+  background-size: 100%; 
+}
+
+.inline-brand{
+  display: inline-flex;
+}
+
+.inline-div{
+  display: inline-flex;
+  padding-top: 100px;
+  padding-left: 100px;  
+  padding-right: 1000px;
+}
+
+.brand_margin{
+  margin-left: 50px;  
+}
+
+.head_padding{
+  padding-left: 50px; 
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
+}
+
+.text_padding{
+  padding-left: 50px;  
+  padding-right: 50px; 
+  text-align: centered;
+  text-justify: inter-word;
+  text-align: justify;
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
+}
+
+.buttons_padding{
+  padding-left: 50px;  
+}
+
+.button_margin{
+  margin-left: 10px; 
+}
+
+.links_padding{
+  padding-left: 150px; 
+}
+
+.links{
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
+  color:  #06365f;
+  text-decoration: none;
+  margin-left: 5px;
+  font-weight:bold;
+}
+
+.link_silver{
+  color: silver;
+  margin-left: 20px;
+  font-weight:lighter;
+}
+
+.button-login{
+  margin-top: 30px;
+  margin-left: 45px;
+}
+
+.button-text{
+  color: silver;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  font-weight:bold;
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
 }
