--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,105 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html{
+  font-size: 12px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  background-position: top;
+}
+
+b {
+  font-weight: 600;
+}
+
+main {
+  width: 70%;
+  margin: 0 auto;
+  padding: 4rem;
+}
+
+content {
+  float: right;
+  width: 55%;
+}
+
+.content-card {
+  padding: 1rem;
+  background-color: #ffffff;
+  border-radius: 0.6rem;
+  box-shadow: 0 1.2rem 1rem rgba(0,0,0,0.4);
+}
+
+.content-card h1 {
+  color: #06365f;
+  width: 65%;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.content-card h1, .content-card p {
+  padding: 1rem;
+}
+
+.download img {
+  margin: 1rem;
+}
+
+header {
+  margin: 0 auto;
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+header img {
+  vertical-align: middle;
+  margin-right: 1rem;
+}
+
+header button {
+  font-weight: 600;
+  color: #ffffff;
+  background-image  : linear-gradient(to bottom,rgba(255, 255, 255, 0.3) 5%, #1c5380 95%);
+  border: 1px solid #06365f;
+  border-radius: 0.2rem;
+  padding: 1rem;
+}
+
+aside {
+  float: left;
+  width: 45%;
+  text-align: center;
+} 
+
+footer {
+  width: 100%;
+  display: inline-block;
+  background-color: #ffffff;
+  z-index: 1000;
+  clear: both;
+  text-align: center;
+  margin-top: 3rem;
+}
+
+footer ul {
+  list-style: none;
+  text-transform: uppercase;
+}
+
+footer ul li {
+  color: #1c5380;
+  display: inline-block;
+  padding: 1rem 0.6rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.copyright {
+  color: #333;
 }
