--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,44 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0px;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x; 
 }
+
+.caja1 {
+
+
+
+}
+
+
+
+
+
+
+.list {
+  display: inline-block;
+  font-size: 10px;
+}
+
+.list li {
+  float: left;
+  list-style: none; 
+  text-transform: uppercase;
+  margin: 0 5px;
+  position: relative;
+  left: 200px;
+}
+
+a {
+  color: #06365f;
+  text-decoration: none;
+}
+
+.list a.copy {
+  float: left;
+  color: gray;
+}
+
+
